<?xml version="1.0" encoding="utf-8"?>


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
    android:layout_marginTop = "180dp"
    android:layout_marginBottom = "30dp"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical"
        >
        <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".CalendarAddActivity"
            android:orientation="vertical"
            android:gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:text=" Enter Event Date as DDMMYYYY"
        android:textSize="17dp"
        android:layout_marginBottom="10dp"


        />
    <EditText
        android:padding="15dp"
        android:id="@+id/event_date"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="68dp"
        android:layout_marginBottom="30dp"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/et_custom"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:textSize="17dp"
        android:layout_marginBottom="10dp"
        android:text="Enter Time of Event"
        />
    <EditText

        android:id="@+id/event_time"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:ems="10"
        android:padding="15dp"
        android:maxLength="7"
        android:layout_marginBottom="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="164dp"
        android:background="@drawable/et_custom"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:textSize="17dp"
        android:layout_marginBottom="10dp"
        android:text="Enter Description of Event"
        />
    <EditText
        android:id="@+id/descript_textbox"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:ems="10"
        android:padding="15dp"
        android:layout_marginBottom="30dp"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="265dp"

        android:background="@drawable/et_custom"/>
<TextView
    android:layout_width="wrap_content"
    android:layout_height="25dp"
    android:textSize="17dp"
    android:layout_marginBottom="10dp"
    android:text="Enter Notes About Event"
    />
    <EditText
        android:id="@+id/notes_textbox"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:ems="10"
        android:padding="15dp"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="375dp"

        android:background="@drawable/et_custom"
        android:layout_marginBottom="30dp"/>

    <ImageButton
        android:id="@+id/add_event_button"
        android:layout_width="199dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="567dp"
        android:src ="@drawable/add_cal_eventbttn"/>


        </LinearLayout>
</ScrollView>